# socketServer

./: .gitignore  MyQueueStruct.h  README.md  SocketUtils.cpp  SocketUtils.h  clientsocket.cpp  clientsocket.h  dataparsed.cpp  dataparsed.h  read_write.c  read_write.h  select.c  select.h  server.cpp  server.h
AClient/: AClient.cpp  AClient.h  CMakeLists.txt  main.cpp
AServer/: CMakeLists.txt  clientConnector.cpp  clientConnector.h  dataPacker.h  dataParser.cpp  dataParser.h  main.cpp  mainController.cpp  mainController.h  serverListener.cpp  serverListener.h  sigslotCommon.h
common/: SocketFd.c  SocketFd.h  SocketUtils.cpp  SocketUtils.h  UniqueFd.h  comdebug.h  read_write.c  read_write.h  select.c  signalHander.hpp
